--- a/SafeviewAI.ipynb
+++ b/SafeviewAI.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/anushreerajesh/Safe-View-AI-/blob/main/SafeviewAI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -891,9 +881,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPH3+hZ4b4netv1uMfO7IsD",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
